--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -93,7 +93,7 @@ aliases:
     command: |
       mvn sonar:sonar \
         -Dsonar.projectKey=entur_${CIRCLE_PROJECT_REPONAME} \
-        -Dsonar.organization=${SONAR_ORG} \
+        -Dsonar.organization=enturas-github \
         -Dsonar.projectName=${CIRCLE_PROJECT_REPONAME} \
         -Dsonar.host.url=https://sonarcloud.io \
         -Dsonar.login=${ENTUR_SONAR_PASSWORD}
