--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,13 +32,13 @@ aliases:
                    <id>ossrh</id>
                  </server>
               <server>
-                <username>$entur_artifactory_user</username>
-                <password>$entur_artifactory_password</password>
+                <username>$ARTIFACTORY_USER</username>
+                <password>$ARTIFACTORY_PASSWORD</password>
                 <id>central</id>
               </server>
               <server>
-                <username>$entur_artifactory_user</username>
-                <password>$entur_artifactory_password</password>
+                <username>$$ARTIFACTORY_USER</username>
+                <password>$ARTIFACTORY_PASSWORD</password>
                 <id>snapshots</id>
               </server>
             </servers>
@@ -153,16 +153,16 @@ workflows:
   build_test_deploy:
     jobs:
       - test:
-          context: org-default-build
+          context: global
       - deploy-artifactory:
-          context: org-default-build
+          context: global
           requires:
             - test
           filters:
             branches:
               only: develop
       - release:
-          context: org-default-build
+          context: global
           requires:
             - test
           filters:
@@ -177,4 +177,4 @@ workflows:
               only: develop
     jobs:
       - sonar:
-          context: org-default-build
+          context: global
