--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -153,7 +153,7 @@ workflows:
   build_test_deploy:
     jobs:
       - test:
-          context: global
+          context: org-default-build
       - deploy-artifactory:
           context: global
           requires:
