--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,8 @@
     <artifactId>netex-utils</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
+    <name>Netex utils</name>
+    <description>Netex utility classes</description>
     <properties>
         <maven-javadoc-plugin.version>3.0.1</maven-javadoc-plugin.version>
         <maven-source-plugin.version>3.0.1</maven-source-plugin.version>
@@ -94,10 +96,25 @@
             </plugin>
         </plugins>
     </build>
+    <url>https://github.com/entur/netex-utils</url>
     <organization>
         <name>Entur AS</name>
         <url>http://www.entur.org/</url>
     </organization>
+    <developers>
+        <developer>
+            <name>Arne Seime</name>
+            <email>arne.seime@entur.org</email>
+            <organization>Entur</organization>
+            <organizationUrl>http://www.entur.org</organizationUrl>
+        </developer>
+        <developer>
+            <name>Dainius Figoras</name>
+            <email>dainius.figoras@entur.org</email>
+            <organization>Entur</organization>
+            <organizationUrl>http://www.entur.org</organizationUrl>
+        </developer>
+    </developers>
     <scm>
         <connection>scm:git:ssh://git@github.com/entur/netex-utils.git</connection>
         <developerConnection>scm:git:ssh://git@github.com/entur/netex-utils.git</developerConnection>
