--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,7 @@
                 <version>1.14.0</version>
                 <configuration>
                     <allowSnapshots>false</allowSnapshots>
+                    <commitMessagePrefix>[ci skip] </commitMessagePrefix>
                 </configuration>
             </plugin>
             <plugin>
