--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -130,6 +130,11 @@ jobs:
       - checkout
       - generate-maven-settings-file:
           settings-file: *maven-settings-file
+      - run: mvn org.apache.maven.plugins:maven-dependency-plugin:3.1.0:go-offline
+      - save_cache:
+          paths:
+            - ~/.m2
+          key: dep-cache-{{ checksum "pom.xml" }}
       - run: mvn verify
   release:
     <<: *java-container-config
@@ -140,6 +145,10 @@ jobs:
       - run: *import_gpg_key
       - generate-maven-settings-file:
           settings-file: *maven-settings-file
+      - restore_cache:
+          keys:
+            - dep-cache-{{ checksum "pom.xml" }}
+            - dep-cache-base
       - run: *release
   sonar:
     <<: *java-container-config
