--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,7 @@
                 <configuration>
                     <allowSnapshots>false</allowSnapshots>
                     <commitMessagePrefix>[ci skip]</commitMessagePrefix>
+                    <verbose>true</verbose>
                 </configuration>
             </plugin>
             <plugin>
