Update renovate bot git user name to avoid releasing for every bumped dep

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ aliases:
   - &release
     name: Release
     command: |
-      if [ "$(git log -n 1 --pretty="%an")" == "Renovate Bot" ]
+      if [ "$(git log -n 1 --pretty="%an")" == "renovate[bot]" ]
       then
         echo "Skipping release"
       else
