--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -107,7 +107,7 @@ aliases:
         -Dsonar.organization=enturas-github \
         -Dsonar.projectName=${CIRCLE_PROJECT_REPONAME} \
         -Dsonar.host.url=https://sonarcloud.io \
-        -Dsonar.login=${ENTUR_SONAR_PASSWORD}
+        -Dsonar.token=${SONAR_TOKEN}
 
 commands:
   generate-maven-settings-file:
