Add lookup-table type char validation for type and value

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,10 +13,10 @@ aliases:
         git checkout master
         git pull --no-edit
         git checkout develop
-        mvn gitflow:release-start gitflow:release-finish -Prelease -DpostReleaseGoals=deploy -DargLine=-Prelease -B
+        mvn gitflow:release-start gitflow:release-finish -P'release,!jmh' -DpostReleaseGoals=deploy -DargLine=-P'release,!jmh' -B
         git checkout master
         git pull --no-edit
-        mvn deploy -DskipTests -Pentur-maven-central-local
+        mvn -P'!jmh' deploy -DskipTests -Pentur-maven-central-local
       fi
 
   - &import_gpg_key
