--- a/.github/workflows/branch-verify.yml
+++ b/.github/workflows/branch-verify.yml
@@ -7,22 +7,8 @@ on:
 
 jobs:
   validate-maven-build:
-    runs-on: ubuntu-24.04
-    steps:
-      - uses: actions/checkout@v4
-      - name: Set up Java 17
-        uses: actions/setup-java@v4
-        with:
-          java-version: 17
-          distribution: liberica
-      - name: Cache Maven repository
-        uses: actions/cache@v4
-        with:
-          path: ~/.m2/repository
-          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-          restore-keys: |
-            ${{ runner.os }}-maven-
-      - name: Verify
-        run: |
-          mvn -B clean verify
-          echo "Validating maven build" >> $GITHUB_STEP_SUMMARY
+    uses: entur/abt-gha-public/.github/workflows/validate-jar-maven-sona.yml@main
+    secrets: inherit
+    with:
+      server-id: entur-partner
+      java-version: 17
