--- a/.github/workflows/deploy-main.yml
+++ b/.github/workflows/deploy-main.yml
@@ -5,7 +5,7 @@ on:
       - main
 
 jobs:
-  deploy-main-maven:
+  maven-build-and-releas:
     if: "!contains(github.event.head_commit.message, '[skip-release]')"
     uses: entur/abt-gha-public/.github/workflows/maven-open-source-increment-version-and-release-to-maven-central.yml@main
     secrets: inherit
