--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <name>Netex utils</name>
     <description>Netex utility classes</description>
     <properties>
-        <jmh.version>1.36</jmh.version>
+        <jmh.version>1.37</jmh.version>
         <junit-jupiter.version>5.11.4</junit-jupiter.version>
         <maven-assembly-plugin.version>2.6</maven-assembly-plugin.version>
         <maven-build-helper-plugin.version>1.12</maven-build-helper-plugin.version>
@@ -26,6 +26,12 @@
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
+            <version>${junit-jupiter.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-params</artifactId>
             <version>${junit-jupiter.version}</version>
             <scope>test</scope>
         </dependency>
@@ -254,6 +260,26 @@
                                     <goal>report</goal>
                                 </goals>
                                 <phase>integration-test</phase>
+                            </execution>
+                            <execution>
+                                <id>default-check</id>
+                                <goals>
+                                    <goal>check</goal>
+                                </goals>
+                                <configuration>
+                                    <rules>
+                                        <rule>
+                                            <element>BUNDLE</element>
+                                            <limits>
+                                                <limit>
+                                                    <counter>INSTRUCTION</counter>
+                                                    <value>COVEREDRATIO</value>
+                                                    <minimum>0.95</minimum>
+                                                </limit>
+                                            </limits>
+                                        </rule>
+                                    </rules>
+                                </configuration>
                             </execution>
                         </executions>
                     </plugin>
