Revert "Adjust build"
This reverts commit cb6ff57ec8d9ae46065ebab5ad89a2f12e014e77.

--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -14,10 +14,6 @@ on:
 
 jobs:
   code-scan:
-    name: Code Scan
-    uses: entur/gha-security/.github/workflows/code-scan.yml@feature/SIK-1611
+    name: CodeQL Scan
+    uses: entur/gha-security/.github/workflows/code-scan.yml@v2
     secrets: inherit
-    with:
-      use_setup_java: true
-      java_version: "21"
-      java_distribution: "temurin"
