--- a/.github/workflows/branch-verify.yml
+++ b/.github/workflows/branch-verify.yml
@@ -7,6 +7,6 @@ on:
 
 jobs:
   validate-maven-build:
-    uses: entur/abt-gha-public/.github/workflows/maven-open-source-verify.yml@main
+    uses: entur/abt-gha-public/.github/workflows/maven-open-source-verify.yml@printSurefireFailures
     with:
       java-version: 21
