--- a/.github/workflows/deploy-main.yml
+++ b/.github/workflows/deploy-main.yml
@@ -6,8 +6,7 @@ on:
 
 jobs:
   maven-build-and-releas:
-    if: "!contains(github.event.head_commit.message, '[skip-release]')"
-    uses: entur/gha-maven-central/.github/workflows/maven-publish.yml@main
+    uses: entur/gha-maven-central/.github/workflows/maven-publish.yml@v1
     secrets: inherit
     with:
       next_version: minor
