--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -17,3 +17,10 @@ jobs:
     name: CodeQL Scan
     uses: entur/gha-security/.github/workflows/code-scan.yml@v2
     secrets: inherit
+    with:
+      use_setup_java: true
+      java_version: "25"
+      java_distribution: "liberica"
+      java_server_id_artifactory: entur-partner
+      use_maven_cache: true
+      job_runner: grp-ubuntu-24.04-16core-x64
